# mimer

./: .gitignore  README.md
mimer-gui/: AGENTS.md  Cargo.toml  README.md
mimer-gui/src/: app.rs  app_info.rs  app_model.rs  charts.rs  command.rs  debounce.rs  domain.rs  filter.rs  format.rs  inspector.rs  main.rs  mock_data.rs  navigation.rs  source.rs  table_state.rs  timeseries.rs  ui_state.rs
mimer-service/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  SOURCES.md  alembic.ini  pyproject.toml
mimer-service/alembic/: env.py
mimer-service/app/: __init__.py  main.py
mimer-service/docs/: data_sources.md  operations.md
mimer-service/infra/: .env.example  docker-compose.prod.yml  docker-compose.yml
mimer-service/scripts/: smoke_api.sh
mimer-service/tests/: conftest.py  test_alerts.py  test_auth.py  test_broker_imports.py  test_capabilities.py  test_config.py  test_constituent_identity.py  test_constituent_prices.py  test_constituent_valuation.py  test_dashboard.py  test_deployment_assets.py  test_detail.py  test_diagnostics.py  test_distributions.py  test_distributions_live_sources.py  test_documents.py  test_exposure.py  test_exposure_drift.py  test_fund_source_coverage.py  test_fund_source_verification.py  test_funds.py  test_fx.py  test_health.py  test_hierarchy.py  test_holding_performance.py  test_holdings.py  test_holdings_live_sources.py  test_imported_instrument_resolution.py  test_instrument_onboarding.py  test_instrument_price_ingestion.py  test_instruments.py  test_issuer_facts.py  test_issuer_source_config.py  test_issuer_xlsx_support.py  test_job_leases.py  test_job_timeline.py  test_jobs.py  test_market_data_planner.py  test_migrations.py  test_onboarding_runs.py  (+14 more)
(+232 files in other folders)
