[package]
name = "mimer"
version = "0.1.0"
edition = "2024"

[features]
default = []
inspection = ["eframe/inspection"]

[dependencies]
directories = "6.0.0"
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = "0.35.0"
egui_plot = "0.36.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = "3.3.0"
